--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,8 @@ layout: default
 <a href="{{ "/" | relative_url }}">{{ site.theme_config.back_home_text }}</a>
 <h1 class="post-title">{{ page.title }}</h1>
 {% include date_and_social_share.html %}
-{{ content }}
+<div class="r-container">
+    {{ content }}
+</div>
 
 <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
