--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -10,11 +10,17 @@ body {
   margin: 0;
   min-height: 100%;
 }
-pre, code {
+pre, code, .r-container pre {
+  max-width: 800px; /* Adjust the width as needed */
+  margin: 0 auto;
+  padding: 1em;
+  background-color: var(--bg-secondary);
+  border-radius: 0.5em;
+  overflow-x: auto;
   font-family: "Anonymous Pro", "Courier New", monospace;
   font-size: 0.9rem;
+  line-height: 1.5;
 }
-
 h2, h3, h4, h5 { margin-top: 1.5em; }
 
 hr { margin: 1em 0; }
@@ -196,17 +202,4 @@ p code, li code {
   a:hover {
     color: var(--links);
   }
-}
-
-// Custom CSS to adjust the width and style of R code chunks
-.r-container pre {
-  max-width: 800px; /* Adjust the width as needed */
-  margin: 0 auto;
-  padding: 1em;
-  background-color: var(--bg-secondary);
-  border-radius: 0.5em;
-  overflow-x: auto;
-  font-family: "Anonymous Pro", "Courier New", monospace;
-  font-size: 0.9rem;
-  line-height: 1.5;
 }
