--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -10,9 +10,21 @@ body {
   margin: 0;
   min-height: 100%;
 }
-pre, code {
+// pre, code {
+//   font-family: "Anonymous Pro", "Courier New", monospace;
+//   font-size: 0.9rem;
+// }
+
+// Custom CSS to adjust the width and style of all code chunks
+pre, code, .r-container pre {
+  max-width: 800px; /* Adjust the width as needed */
+  margin: 0 auto;
+  padding: 1em;
+  border-radius: 0.5em;
+  overflow-x: auto;
   font-family: "Anonymous Pro", "Courier New", monospace;
   font-size: 0.9rem;
+  line-height: 1.5;
 }
 
 h2, h3, h4, h5 { margin-top: 1.5em; }
