adjust the R chunk

--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -19,12 +19,12 @@ body {
 pre, code, .r-container pre {
   max-width: 800px; /* Adjust the width as needed */
   margin: 0 auto;
-  padding: 1em;
-  border-radius: 0.5em;
-  overflow-x: auto;
+  // padding: 1em;
+  // border-radius: 0.5em;
+  // overflow-x: auto;
   font-family: "Anonymous Pro", "Courier New", monospace;
   font-size: 0.9rem;
-  line-height: 1.5;
+  // line-height: 1.5;
 }
 
 h2, h3, h4, h5 { margin-top: 1.5em; }
