--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 
-html { height: 100%; }
+html { height: 100%; padding: 0}
 
 body {
   font-family:  "Inter", -apple-system, "avenir next", avenir, roboto, noto, ubuntu, "helvetica neue", helvetica, sans-serif;
   font-size: 1.0rem;
   line-height: 2;
   margin: 0;
+  padding: 0;
   min-height: 100%;
 }
 pre, code {
