--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -1,6 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 html { height: 100%; }
 
 body {
