--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -32,9 +32,9 @@ p { margin: 1em 0; }
 li { margin: 0.4em 0; }
 
 .w {
-  max-width: 720px;
+  max-width: 7200px;
   margin: 0 auto;
-  padding: 2em 1em;
+  padding: 0 0;
 }
 
 table, th, td {
