--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -32,9 +32,9 @@ p { margin: 1em 0; }
 li { margin: 0.4em 0; }
 
 .w {
-  max-width: 1000px;
+  max-width: 7200px;
   margin: 1em auto;
-  padding: 0 0;
+  padding: 0.05em 0.05em;
 }
 
 table, th, td {
