--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -32,8 +32,8 @@ p { margin: 1em 0; }
 li { margin: 0.4em 0; }
 
 .w {
-  max-width: 7200px;
-  margin: 1em auto;
+  max-width: 720px;
+  margin: 0 auto;
   padding: 0.05em 0.05em;
 }
 
