--- a/_sass/list.scss
+++ b/_sass/list.scss
@@ -7,7 +7,8 @@ ul.horizontal-list {
   
     li {
       display:inline;
-      margin-right: 1em;
+      margin: 0;
+      // margin-right: 1em;
     }
   
     li a {
