--- a/_sass/list.scss
+++ b/_sass/list.scss
@@ -2,7 +2,8 @@ ul.horizontal-list {
     display: flex;
     //justify-content: space-between;
     margin-top: 0em;
-    margin-left: -40px;
+    // margin-left: -40px;
+    margin-left: -20px;
     flex-wrap: wrap;
   
     li {
