--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -38,7 +38,7 @@ li { margin: 0.4em 0; }
 }
 
 table, th, td {
-  width: fit-content;
+  width: auto;
   border: thin solid black;
   border-collapse: collapse;
   padding: 0.1em;
