--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -32,7 +32,7 @@ p { margin: 1em 0; }
 li { margin: 0.4em 0; }
 
 .w {
-  max-width: 1400px;
+  max-width: 1400px; /* the width of the main body */
   margin: 0 auto;
   padding: 0.05em 0.05em;
 }
