--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -64,14 +64,8 @@ img {
   max-width: 100%;
   display: block;
   margin: 0 auto;
-  overflow: visible;
-}
-
-fig {
-  display: block; /* Ensure the figure is visible */
-  margin: 0;
-  padding: 0;
-  overflow: visible; /* Prevent clipping */
+  // overflow: visible;
+  all: inherit;
 }
 
 html {
