only safari works

--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -64,8 +64,8 @@ img {
   max-width: 100%;
   display: block;
   margin: 0 auto;
-  // overflow: visible;
-  all: inherit;
+  overflow: visible;
+  // all: inherit;
 }
 
 html {
